<resources>
    <string name="app_name">Water Tanker</string>
    <string name="no_booking">No Bookings Found</string>
    <!--<item name="myUrl" type="menu">http://myUrl.com</item>-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="booking_id_text">Booking ID</string>
    <string name="estimated_distance">Estimated Distance</string>
    <string name="final_distance">Final Distance</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="drop_point">Drop Point</string>
    <string name="controller_name">Controller Name</string>
    <string name="customer_number">Customer Mobile</string>
    <string name="message">Message</string>
    <string name="total_trip">Total Trips : </string>
    <string name="total_km">Total Km :</string>
    <string name="view">View</string>
    <string name="nonotificatiocation">No Notifications Found</string>



    <!-- Page Titles-->
    <string name="trip_complete">Trip Complete</string>
    <string name="trip_details">Trip Details</string>
    <string name="trips">Completed Trips</string>
    <string name="cancel_trips">Cancelled Trips</string>
    <string name="language">Language</string>
    <string name="logout">LogOut</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="notifications">Notifications</string>
    <string name="booking_list">Booking List</string>
    <string name="request_list">Request List</string>
    <string name="request_details">Request Details</string>
    <string name="booking_details">Booking Details</string>

    <string name="distance">Distance</string>
    <string name="from">From</string>
    <string name="to">To</string>




    <string name="enter_code">Enter Code</string>
    <string name="otpscreen_msg">Please ask the customer to provide 6 digit verification code</string>
    <string name="verify_txt">Verify</string>
    <string name="resend_txt">ResendOTP</string>
    <string name="backtohome"> go to booking list</string>
    <string name="seemore">See More</string>
    <string name="seeless">See Less</string>
    <string name="end_trip">End Trip</string>


    <string name="accept">ACCEPT</string>
    <string name="view_map">View Map</string>
    <string name="start">START</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="booking_started">Booking Started</string>
    


    <!--notification single item-->
    <string name="notification_heading"> The Standard Lorem Ipsum passage, used since 1500s </string>


    <string name="wrongOtp">enter the otp correctly</string>

</resources>
