<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TripComplete">

    <RelativeLayout
        android:id="@+id/rl_trip_complete_mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyLight">
        <RelativeLayout
            android:id="@+id/rl_trip_complete_toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                layout="@layout/toolbar_with_bk_arrow"
                android:id="@+id/id_trip_complete_toolbar"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/rl_trip_complete_status"
            android:background="@color/design_default_color_primary"
            android:layout_below="@+id/rl_trip_complete_toolbarLayout">
            <TextView
                android:id="@+id/tv_tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_complete"
                android:textColor="@color/colorwhite"
                android:textSize="14sp"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorwhite"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            android:id="@+id/rl_trip_complete_showmap"
            android:layout_below="@+id/rl_trip_complete_status">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_trip_complete_showmap"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:text="Show Map"
                android:textSize="14dp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorblack"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_plus"
                android:id="@+id/iv_trip_complete_showmap"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            android:id="@+id/rl_tripComplete_map"
            android:layout_below="@+id/rl_trip_complete_showmap"
            android:layout_above="@+id/rl_complete_bottom_btn">
            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fg_tripcomplete_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                />
        </RelativeLayout>
    <ScrollView
        android:id="@+id/sv_tripcomplete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_trip_complete_showmap"
        android:layout_above="@+id/rl_complete_bottom_btn"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreyLight"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rl_tripcomplete_main"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:background="@color/colorwhite">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_booking_id_title"
                android:text="@string/booking_id_text"
                android:textColor="@color/greenLight"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_bookingid"
                android:text="123456789"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_marginTop="5dp"
                android:layout_alignStart="@+id/tv_tripcomplete_booking_id_title"
                android:layout_below="@+id/tv_tripcomplete_booking_id_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/tripcomplete_underline1"
                android:background="@color/colordark_grey"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_tripcomplete_bookingid"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_distance_title"
                android:layout_below="@+id/tripcomplete_underline1"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="@string/estimated_distance"
                android:textColor="@color/greenLight"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_distance"
                android:layout_below="@+id/tv_tripcomplete_distance_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="15 KM"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/tripcomplete_underline2"
                android:layout_below="@id/tv_tripcomplete_distance"
                android:background="@color/colordark_grey"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@id/tripcomplete_underline1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_pickup_title"
                android:layout_below="@+id/tripcomplete_underline2"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="@string/pickup_point"
                android:textColor="@color/greenLight"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_pickup"
                android:layout_below="@+id/tv_tripcomplete_pickup_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="398/A-2, Shubham tower, 3rd 'C' road, Sardarpura, Jodhpur, Rajasthan 342003"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/tripcomplete_underline3"
                android:layout_below="@id/tv_tripcomplete_pickup"
                android:background="@color/colordark_grey"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@id/tripcomplete_underline1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_drop_title"
                android:layout_below="@+id/tripcomplete_underline3"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="@string/drop_point"
                android:textColor="@color/greenLight"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_drop"
                android:layout_below="@+id/tv_tripcomplete_drop_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="115-117, Summer Nagar, Boranada, Jodhpur, Rajasthan 3420112"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/tripcomplete_underline4"
                android:layout_below="@id/tv_tripcomplete_drop"
                android:background="@color/colordark_grey"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@id/tripcomplete_underline1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_drivername_title"
                android:layout_below="@+id/tripcomplete_underline4"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="@string/controller_name"
                android:textColor="@color/greenLight"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_drivername"
                android:layout_below="@+id/tv_tripcomplete_drivername_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="Max Pitter"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/tripcomplete_underline5"
                android:layout_below="@id/tv_tripcomplete_drivername"
                android:background="@color/colordark_grey"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@id/tripcomplete_underline1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_contact_title"
                android:layout_below="@+id/tripcomplete_underline5"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="@string/customer_number"
                android:textColor="@color/greenLight"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_contact"
                android:layout_below="@+id/tv_tripcomplete_contact_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="1234567890"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/tripcomplete_underline6"
                android:layout_below="@id/tv_tripcomplete_contact"
                android:background="@color/colordark_grey"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@id/tripcomplete_underline1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_message_title"
                android:layout_below="@+id/tripcomplete_underline6"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="@string/message"
                android:textColor="@color/greenLight"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripcomplete_message"
                android:layout_below="@+id/tv_tripcomplete_message_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblack"
                android:textSize="13dp"
                android:layout_alignStart="@+id/tv_tripcomplete_bookingid"
                android:layout_alignEnd="@+id/tripcomplete_underline1"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."/>
        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>



        <RelativeLayout
            android:id="@+id/trip_complete_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_complete_bottom_btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorwhite"
            >
        </RelativeLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_complete_bottom_btn"
    android:layout_alignParentBottom="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/rl_bottomLayout_text"
        android:background="@color/greenLight"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_bottomlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/backtohome"
            android:layout_toLeftOf="@+id/rl_bottomLayout_icon"
            android:textColor="@color/colorwhite"
            android:textSize="13dp"
            android:gravity="center"/>
        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/rl_bottomLayout_icon"
            android:layout_alignParentRight="true"
            android:background="@color/greenDark">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/forwordarrow"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
</RelativeLayout>
</RelativeLayout>